# repo-tidier

./: README.md  main.py  pyproject.toml
src/repo_tidier/: cli.py  scanner.py
tests/: test_scanner.py
