[project]
name = "repo-tidier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.scripts]
repo-tidier = "repo_tidier.cli:app"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "mypy>=1.8.0",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient, can tighten later
ignore_missing_imports = false
